# smashcardloader

./: CMakeLists.txt  smashcardloader.cc
Common/: CMakeLists.txt  scmrev.h
Core/HW/GCMemcard/: GCMemcard.cpp  GCMemcard.h
minizip/: CMakeLists.txt
